@@ -51,6 +51,9 @@ ToDo/Notes:
 	  marks all buffers belonging to an ntfs record dirty, followed by
 	  marking the page the ntfs record is in dirty and also marking the vfs
 	  inode containing the ntfs record dirty (I_DIRTY_PAGES).
+	- Switch fs/ntfs/index.h::ntfs_index_entry_mark_dirty() to using the
+	  new helper fs/ntfs/aops.c::mark_ntfs_record_dirty() and remove the no
+	  longer needed fs/ntfs/index.[hc]::__ntfs_index_entry_mark_dirty().
 
 2.1.20 - Fix two stupid bugs introduced in 2.1.18 release.
 
